-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, jfx14
-
Component/s: javafx
-
x86_64
-
os_x_10.15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8249709 | jfx14 | Alexander Matveev | P2 | Resolved | Fixed | |
| JDK-8247260 | jfx11.0.8 | Alexander Matveev | P2 | Resolved | Fixed | |
| JDK-8242476 | 8u261 | Alexander Matveev | P2 | Closed | Fixed | b03 |
| JDK-8243067 | 8u251 | Alexander Matveev | P2 | Closed | Fixed | b32 |
This is a follow-on bug to JDK-8236832, which is an incomplete fix. It does fix the hang for some video files, but there are still others that hang.
- backported by
-
JDK-8247260 [macos 10.15] JavaFX Media hangs on some video files on Catalina
-
- Resolved
-
-
JDK-8249709 [macos 10.15] JavaFX Media hangs on some video files on Catalina
-
- Resolved
-
-
JDK-8242476 [macos 10.15] JavaFX Media hangs on some video files on Catalina
-
- Closed
-
-
JDK-8243067 [macos 10.15] JavaFX Media hangs on some video files on Catalina
-
- Closed
-
- clones
-
JDK-8236832 [macos 10.15] JavaFX Application hangs on video play on Catalina
-
- Resolved
-
(2 links to)