8240694: [macos 10.15] JavaFX Media hangs on some video files on Catalina