modules/javafx.media/src/main/native/jfxmedia/platform/osx/avf/AVFAudioProcessor.mm
@@ -281,8 +281,4 @@ void ProcessAudioTap(MTAudioProcessingTapRef tapRef,
             return;
         }
     }
-
-    if (context->audioSpectrum != nullptr) {
-        context->audioSpectrum.get()->SetFirstBufferDelivered(true);
-    }
 }
